# qp-analyzer

./: Cargo.toml  Readme.md  Release.md
.github/workflows/: main.yml  release.yaml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/scripts/: fix-package-json.js  fix-package-name.js
crates/wasm/src/: lib.rs
crates/wasm/src-js/: cli.js
crates/wasm/tests/: index.test.js  package.json
example/: op.graphql  supergraph.graphql
example/src-subgraphs/: subgraphs.graphql
src/: main.rs
