[package]
name = "qp-analyzer"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"

[dependencies]
# Apollo dependencies
apollo-compiler = "1.30"
apollo-federation = "2.7"

# Other dependencies
clap = { version = "4.5", features = ["derive"] }
indexmap = "2.11"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
