[package]
name = "qp-analyzer"
version = "0.2.0"
edition = "2024"
license = "Elastic-2.0"

[dependencies]
# Apollo dependencies
apollo-compiler = { workspace = true }
apollo-federation = { workspace = true }
qp-compare = { workspace = true }

# Other dependencies
tracing = { workspace = true }
serde = { workspace = true }
