[package]
name = "qp-analyzer-cli"
version = "0.2.0"
edition = "2024"
license = "Elastic-2.0"

[dependencies]
# Apollo dependencies
qp-analyzer = { path = "../analyzer" }
apollo-compiler = { workspace = true }
apollo-federation = { workspace = true }
qp-compare = { workspace = true }

# Other dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
