[package]
name = "qp-analyzer-wasm"
description = "Apollo Query Plan Analyzer compiled to WebAssembly"
repository = "https://github.com/apollographql/qp-analyzer"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Apollo dependencies
qp-analyzer = { path = "../analyzer" }
apollo-federation = { workspace = true }

# Other dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

# Feature overrides of indirect dependency
getrandom = { version = "0.3", features = ["wasm_js"] }
